refactor: 리뷰 등록시 받아오는 상품정보 관련 백 로직 추가